--- a/app/views/beers/index.html.haml
+++ b/app/views/beers/index.html.haml
@@ -1,6 +1,7 @@
 %h1 Top ten
--@beers.each do |beer|
-  = beer.name 
-  = beer.brand
-  = link_to beer.vote, root_path(beer.obdb_id), method: :post
--end
+%ol
+  -@beers.each do |beer|
+    %li
+      = beer.name 
+      = beer.brand
+      = link_to "Votes: #{beer.votes}",  vote_path(beer.obdb_id), method: :post
