--- a/app/views/beers/index.html.haml
+++ b/app/views/beers/index.html.haml
@@ -1,4 +1,8 @@
 %h1 Top ten
+= form_tag(root_path, method: "get") do
+  = label_tag(:name, "Search for:")
+  = text_field_tag(:name)
+  = submit_tag("Search")
 %ol
   -@beers.each do |beer|
     %li
